i just realized how STUPID i am stupid i am stupid, will fix tmrw (header combines,param classes, etc)